# MultiThread_Sum

./: CMakeLists.txt  README.md  main.c  test.txt
functions/: error_handling.c  file_handling.c  functions.c  lumb_list.c
headers/: error_handling.h  file_handling.h  functions.h  lumb_list.h
test_files/: testv3.txt  testv3_single_line.txt
